endpoint/logs/google_ranked/2025-12-28T210909.281498.log
2025-12-28 21:09:10 [scrapy] DEBUG: Crawled (200) <GET https://www.reddit.com/search.json?q=new_year_sale&sort=relevance&limit=50> (referer: None)
2025-12-28 21:09:11 [scrapy] ERROR: Spider error processing <GET https://www.reddit.com/search.json?q=new_year_sale&sort=relevance&limit=50> (referer: None)
Traceback (most recent call last):
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\core\scraper.py", line 194, in _scrape
    output = await maybe_deferred_to_future(
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<3 lines>...
    )
    ^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\twisted\internet\defer.py", line 1257, in adapt
    extracted: _SelfResultT | Failure = result.result()
                                        ~~~~~~~~~~~~~^^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\core\scraper.py", line 247, in call_spider_async
    warn_on_generator_with_return_value(self.crawler.spider, callback)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\utils\misc.py", line 292, in warn_on_generator_with_return_value
    if is_generator_with_return_value(callable):
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\utils\misc.py", line 272, in is_generator_with_return_value
    tree = ast.parse(code)
  File "C:\Python314\Lib\ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "<unknown>", line 1
    "Accept-Language": "en-US,en;q=0.9",
    ^^^^^^^^^^^^^^^^^
SyntaxError: illegal target for annotation
2025-12-28 21:09:13 [scrapy] DEBUG: Crawled (200) <GET https://www.reddit.com/search.json?q=new_year_sale&sort=relevance&limit=50> (referer: None)
2025-12-28 21:09:13 [scrapy] ERROR: Spider error processing <GET https://www.reddit.com/search.json?q=new_year_sale&sort=relevance&limit=50> (referer: None)
Traceback (most recent call last):
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\core\scraper.py", line 194, in _scrape
    output = await maybe_deferred_to_future(
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<3 lines>...
    )
    ^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\twisted\internet\defer.py", line 1257, in adapt
    extracted: _SelfResultT | Failure = result.result()
                                        ~~~~~~~~~~~~~^^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\core\scraper.py", line 247, in call_spider_async
    warn_on_generator_with_return_value(self.crawler.spider, callback)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\utils\misc.py", line 292, in warn_on_generator_with_return_value
    if is_generator_with_return_value(callable):
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\aman\OneDrive\Desktop\late_proj\venv\Lib\site-packages\scrapy\utils\misc.py", line 272, in is_generator_with_return_value
    tree = ast.parse(code)
  File "C:\Python314\Lib\ast.py", line 46, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "<unknown>", line 1
    "Accept-Language": "en-US,en;q=0.9",
    ^^^^^^^^^^^^^^^^^
SyntaxError: illegal target for annotation
2025-12-28 21:09:13 [scrapy] INFO: Closing spider (finished)
2025-12-28 21:09:13 [scrapy] INFO: Stored json feed (0 items) in: posts/spiders/output/google_ranked_new_year_sale_2025-12-28T15-39-09+00-00.json
2025-12-28 21:09:13 [scrapy] INFO: Dumping Scrapy stats:
{'downloader/request_bytes': 990,
 'downloader/request_count': 2,
 'downloader/request_method_count/GET': 2,
 'downloader/response_bytes': 119034,
 'downloader/response_count': 2,
 'downloader/response_status_count/200': 2,
 'elapsed_time_seconds': 4.524614,
 'feedexport/success_count/FileFeedStorage': 1,
 'finish_reason': 'finished',
 'finish_time': datetime.datetime(2025, 12, 28, 15, 39, 13, 815262, tzinfo=datetime.timezone.utc),
 'httpcompression/response_bytes': 607692,
 'httpcompression/response_count': 2,
 'log_count/DEBUG': 4,
 'log_count/ERROR': 2,
 'log_count/INFO': 8,
 'log_count/WARNING': 1,
 'response_received_count': 2,
 'scheduler/dequeued': 2,
 'scheduler/dequeued/memory': 2,
 'scheduler/enqueued': 2,
 'scheduler/enqueued/memory': 2,
 'spider_exceptions/SyntaxError': 2,
 'spider_exceptions/count': 2,
 'start_time': datetime.datetime(2025, 12, 28, 15, 39, 9, 290648, tzinfo=datetime.timezone.utc)}
2025-12-28 21:09:13 [scrapy] INFO: Spider closed (finished)
